--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 distlib==0.3.8
 Django==4.2.11
+djangorestframework==3.15.1
 filelock==3.13.4
 idna==3.7
 pillow==10.3.0
